# CppPricingToolbox

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  code_coverage.sh
include/toolbox/Algebra/: VectorMatrix.hpp  VectorMatrixSH.hpp  VectorMatrix_single_header.hpp  Vectors.hpp
include/toolbox/Algebra/BaseTypes/: IsIfTemplates.hpp
include/toolbox/Algebra/Core/: Assert.hpp  IsTemplates.hpp  ResultType.hpp  Vector.hpp
include/toolbox/Algebra/Expressions/: ExprVecMap.hpp  ExprVecTransposed.hpp  ExprVecVecMap.hpp  MatrixExpr.hpp  MatrixExprDiag.hpp  MatrixExprDiagView.hpp  MatrixExprMult.hp_p  MatrixExprReshape.hpp  MatrixExprRowCol.hpp  MatrixExprRowColDiag.hpp  MatrixExprRowColView.hpp  MatrixExprSubMatrix.hpp  MatrixExprSubmatrix.hpp  MatrixExprTrans.hpp  SumExprBinary.hpp
include/toolbox/Algebra/Functions/: AlgebraicExpr.hpp  DotInnerProduct.hpp  IsSquareSymmetric.hpp  MinMax.hpp  Mult.hpp  Norm.hpp  SumProd.hpp  SwapRowsCols.hpp
include/toolbox/Algebra/Functions/Expr/: Algebraic.hpp  Diagonal.hpp  RowColDiag.hpp  RowColumn.hpp  SubMatrix.hpp  Submatrix.hpp  Submatrix_.hpp
include/toolbox/Algebra/LAPACK/: CholeskyDecomp.hpp  JacobiRotation.hpp  QRDecomp.hpp  SingularValueDecomp.hpp
include/toolbox/Algebra/Misc/: Maths.hpp
include/toolbox/Algebra/Operations/: AlgebraicOperations.hpp  ArithmeticOperations.hpp  OperationClassesBinary.hpp  OperationClassesUnary.hpp  OperationFunctions.hpp
include/toolbox/Algebra/Operations/Classes/: AlgebraOperations.hpp  BinaryOperations.hpp
include/toolbox/Algebra/Operations/Functions/: AlgebraicOperations.hpp  BasicOperations.hpp  MathsOperations.h_p_p
include/toolbox/Algebra/Operators/: AlgebraicOperatorFunctions.hpp  ArithmeticOperators.hpp  BasicOperatorClasses.hpp  BasicOperatorFunctions.hpp  EqualityOperators.hpp  ExtraOperatorFunctions.hpp
include/toolbox/Algebra/Operators/Expressions/: MatrixExpr.hpp  MatrixExprTrans.hpp  SumExprBinary.hpp  VectorExpr.hpp
include/toolbox/Algebra/Storage/: DenseStorage.hpp  StorageShape.hpp
include/toolbox/Algebra/Types/: CustomMatrix.hpp  DenseMatrix.hpp  DenseVector.hpp  IdentityMatrix.hpp  Matrix.hpp  MatrixShape.hpp
include/toolbox/Algebra/Types/Base/: Matrix.hpp  Vector.hpp
include/toolbox/Algebra/Typetraits/: ApplyOperator.hpp  ElementType.hpp  IsHasFunctions.hpp  OpResultClass.hpp  OpResultType.hpp
include/toolbox/Algebra/VectorTypes/: DynamicVector.hpp  StaticVector.hpp
include/toolbox/Core/: ApproxValue.hpp  Decimal.hpp  Error.hpp  Misc.hpp  Typetraits.hpp
include/toolbox/Date/: Date.hpp  DateParser.hpp  DateTime.hpp  Tenor.hpp
include/toolbox/Debug/: Profiler.hpp  Timer.hpp
include/toolbox/Generic/: CircularBuffer.hpp  Serialisation.hpp  Zip.hpp
include/toolbox/Profiler/: Profiler.hpp
include/toolbox/Random/: GeneralStatistics.hpp  MonteCarloEngine.hpp  RandomVariableGenerator.hpp
python_bindings/: CMakeLists.txt
python_bindings/src/: PyBindings.cpp
sample_scripts/: CMakeLists.txt
sample_scripts/src/: SampleScript_Profiler.cpp  SampleScript_VectorDbl.cpp
src/sample_scripts/: SampleScript_Profiler.cpp
src/unit_tests/: UnitTest_Date.cpp  UnitTest_DateTime.cpp  UnitTest_Dates.cpp  UnitTest_Tenor.cpp
unit_tests/: CMakeLists.txt
unit_tests/src/: UnitTest_Algebra_Matrix.cpp  UnitTest_Algebra_Vector_Expr.cpp  UnitTest_Algebra_Vector_Init.cpp  UnitTest_ApproxValue.cpp  UnitTest_CircularBuffer.cpp  UnitTest_Date.cpp  UnitTest_DateTime.cpp  UnitTest_Decimal.cpp  UnitTest_Main.cpp  UnitTest_Random.cpp  UnitTest_Serialisation.cpp  UnitTest_Tenor.cpp
unit_tests/src/Algebra/: UnitTest_Algebra_LAPACK_SVD.cpp  UnitTest_Algebra_Matrix.cpp  UnitTest_Algebra_Matrix_AlgebraicOp.cpp  UnitTest_Algebra_Matrix_ExtraOp.cpp  UnitTest_Algebra_Matrix_Mult.cpp  UnitTest_Algebra_Matrix_RowColDiag.cpp  UnitTest_Algebra_Vector_AlgebraicOp.cpp  UnitTest_Algebra_Vector_Base.cpp  UnitTest_Algebra_Vector_CastToStd.cpp  UnitTest_Algebra_Vector_Expr.cpp
unit_tests/src/Algebra/Basics/: UnitTest_Algebra_Basics_CastToStd.cpp  UnitTest_Algebra_Basics_Identity.cpp  UnitTest_Algebra_Basics_IdentityMatrix.cpp  UnitTest_Algebra_Basics_InitMat.cpp  UnitTest_Algebra_Basics_InitVec.cpp  UnitTest_Algebra_Basics_ToString.cpp
unit_tests/src/Algebra/Expressions/: UnitTest_Algebra_ExprView_Diag.cpp  UnitTest_Algebra_ExprView_RowCol.cpp  UnitTest_Algebra_ExprView_RowsCols.cpp  UnitTest_Algebra_ExprView_SubMatrix.cpp  UnitTest_Algebra_ExprView_Submatrix.cpp  UnitTest_Algebra_ExprView_Submatrix_.cpp  UnitTest_Algebra_Expr_AbsSqrtCbrt.cpp  UnitTest_Algebra_Expr_AddMatVec.cpp  UnitTest_Algebra_Expr_AsType.cpp  UnitTest_Algebra_Expr_LongExpr.cpp  UnitTest_Algebra_Expr_Power.cpp  UnitTest_Algebra_Expr_Reshape.cpp  UnitTest_Algebra_Expr_RowColDiag.cpp  UnitTest_Algebra_Expr_Squared.cpp  UnitTest_Algebra_Expr_Trans.cpp
unit_tests/src/Algebra/Functions/: UnitTest_Algebra_Func_DotInnerProd.cpp  UnitTest_Algebra_Func_IsSquareSymm.cpp  UnitTest_Algebra_Func_MinMax.cpp  UnitTest_Algebra_Func_Mult.cpp  UnitTest_Algebra_Func_Norm.cpp  UnitTest_Algebra_Func_SumProd.cpp  UnitTest_Algebra_Func_SwapRowsCols.cpp
unit_tests/src/Algebra/LAPACK/: UnitTest_Algebra_LAPACK_Cholesky.cpp  UnitTest_Algebra_LAPACK_QRDecomp.cpp  UnitTest_Algebra_LAPACK_SVD.cpp
unit_tests/src/Algebra/Operators/: UnitTest_Algebra_Op_Assignment.cpp  UnitTest_Algebra_Op_Equality.cpp
unit_tests/src/Other/: UnitTest_ApproxValue.cpp  UnitTest_CircularBuffer.cpp  UnitTest_Date.cpp  UnitTest_DateTime.cpp  UnitTest_Decimal.cpp  UnitTest_Random.cpp  UnitTest_Serialisation.cpp  UnitTest_Tenor.cpp  UnitTest_Zip.cpp
unit_tests/src/individual/: UnitTest_Algebra_Matrix.cpp  UnitTest_Algebra_Vector.cpp  UnitTest_Algebra_Vector_Base.cpp  UnitTest_Algebra_Vector_Expr.cpp  UnitTest_Algebra_Vector_Init.cpp  UnitTest_CircularBuffer.cpp  UnitTest_Date.cpp  UnitTest_DateTime.cpp  UnitTest_Decimal.cpp  UnitTest_Random.cpp  UnitTest_Serialisation.cpp  UnitTest_StaticVector.cpp  UnitTest_Tenor.cpp  UnitTest_Vector.cpp
